lolspeak.BNF
<noun_phrase>	::=	<article> <adjective>  <noun>
<verb>	 	    ::=	lovez  |  hatez  | ates
<noun>	 	    ::=	dawg  |  kat  |  rat
<adjective>     ::= fat  |  hungry | happy | mean
<article>	    ::=	a  | teh

<lolspeak> 	    ::=	<noun_phrase>   <verb> <noun_phrase>
